
[*] Tue Oct 15 2002 - netcat v0.6.1

  o Fixed a compilation error in the "doc/" subdirectory when using virtual
    paths.
  o Fixed the socket creation function not setting the right sockopts.  This
    caused netcat to fail opening sockets in some situations.
  o Unified the SIOCGIF* and SIOCGLIF* extension in order to allow udphelper
    compile on Solaris.
  o Fixed a compilation error in udphelper.c on Solaris.
  o Added type "in_port_t" to indicate port numbers in network byte order.
    Also the "nc_port_t" object now contains the port number both in host byte
    order and network byte order notation, which needs less conversions.
  o Added slovak translation, thanks to Lubomir Sedlacik.


[*] Thu Aug 22 2002 - netcat v0.6.0

  o Rewritten the udp listening routines.  Now it uses the newly added
    udphelper routines in order to allow a portable way to simulate two-ends
    connections in UDP mode.
  o Added the NEWS file containing release notes since version 0.2.1.
  o Fixes and additions to the configure script.
  o Now compiles even if random support is not present in the OS.
  o Fixed `-V' option not working. [BUG #588761]
  o Fixed a compilation (a missing header) error on some older BSD4 machines.
  o Fixed hexdump of incoming data that was showing the wrong memory section.
    This bug was introduced with the queues model in core.c.
  o Now it is possible to disable the debugging support at runtime if it was
    compiled in.
  o Restored the command line switch `-e' (exec).
  o Added new beta signal handling functions.
  o Fixed connection failures not handled properly in tunnel mode.
  o Fixed global return status to match the program specifications.
  o Sockets shouldn't be left in a TIME_WAIT status anymore. [BUG #588961]
  o Updated internal gettext support to version 0.11.5.
  o The hexdump function now doesn't buffer more than one data block anymore.
    This caused some packets not to be logged if Netcat dead unexpectedly.